--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link href="dist/hamburgers.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DA Clothing Manufacturer</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./logo.png">
+    <title>ᴅᴀ ᴄʟᴏᴛʜɪɴɢ ᴍᴀɴᴜꜰᴀᴄᴛᴜʀᴇʀ</title>
   </head>
   <body>
     <div id="root"></div>
