Added SEO Optimization

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <link href="dist/hamburgers.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
+    <meta name="description" content="DA Clothing Manufacturer in Tiruppur delivers trendy, high-quality apparel with sustainable practices and global reach">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" sizes="32x32" href="./logo.png">
-    <title>ᴅᴀ ᴄʟᴏᴛʜɪɴɢ ᴍᴀɴᴜꜰᴀᴄᴛᴜʀᴇʀ</title>
+    <title>DA Clothing Manufacturer: Trendsetting Apparel Production in Tiruppur</title>
   </head>
   <body>
     <div id="root"></div>
